force-app/main/default/objects/VisualAntidote__Form_Migration__c/VisualAntidote__Form_Migration__c.object-meta.xml
<CustomObject>
    <label>Form Migration</label>
    <nameField>
        <displayFormat>FM-{0}</displayFormat>
        <label>Form_Migration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form_Migration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>