force-app/main/default/objects/VisualAntidote__Form_Migration__c/fields/VisualAntidote__ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__ApprovedBy__c</fullName>
    <label>ApprovedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>