force-app/main/default/objects/VisualAntidote__Form_Migration__c/fields/VisualAntidote__Date__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>