force-app/main/default/objects/VisualAntidote__Form_Migration__c/fields/VisualAntidote__SourceOrgName__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__SourceOrgName__c</fullName>
    <label>SourceOrgName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>